fix spacing of input-fields using custom class - fix #43

--- a/app/styles/_basic.scss
+++ b/app/styles/_basic.scss
@@ -65,3 +65,7 @@ body {
     max-height: $height;
   }
 }
+
+.inputField__spacing {
+  margin-top: 1rem;
+}
